--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Emailcheats by operaamerica</title>
+    <title>Email Cheats by audreysaccone</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,16 +15,16 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Emailcheats</h1>
+        <h1>Email Cheats</h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/operaamerica/emailcheats">View the Project on GitHub <small>operaamerica/emailcheats</small></a></p>
+        <p class="view"><a href="https://github.com/audreysaccone/emailcheats">View the Project on GitHub <small>audreysaccone/emailcheats</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/operaamerica/emailcheats/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/operaamerica/emailcheats/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/operaamerica/emailcheats">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/audreysaccone/emailcheats/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/audreysaccone/emailcheats/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/audreysaccone/emailcheats">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -61,7 +61,7 @@ $ git checkout gh-pages
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/operaamerica">operaamerica</a></p>
+        <p>This project is maintained by <a href="https://github.com/audreysaccone">audreysaccone</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
