--- a/index.html
+++ b/index.html
@@ -16,22 +16,108 @@
     <div class="wrapper">
       <header>
         <h1>Email Cheats</h1>
-        <p></p>
-
-        <p class="view"><a href="https://github.com/audreysaccone/emailcheats">View the Project on GitHub <small>audreysaccone/emailcheats</small></a></p>
 
 
         <ul>
           <li><a href="https://github.com/audreysaccone/emailcheats/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/audreysaccone/emailcheats/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/audreysaccone/emailcheats">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h2>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>E-mail cheats</h2>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>This is a quick guide to show you how to create some elements in your e-newsletters.</p>
+
+<h3>Tables</h3>
+
+This code:
+
+<pre><code><table>
+  <tr>
+    <td>
+      Content in cell 1
+    </td>
+    <td>
+      Content in cell 2
+    </td>
+    <td>
+      Content in cell 3
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Content in cell 4
+    </td>
+    <td colspan="2">
+      This is a cell that spans 2 columns. You can do this by writing <pre><td colspan="2"></pre> where the value for <pre>colspan</pre> is how many columns you should be spanning.
+    </td>
+  </tr>
+  <tr>
+    <td rowspan="2">
+      This is a cell that spans 2 rows. You can do this by writing <pr><td rowspan="2"></pre> where the value for <pre>rowspan</pre> is how many rows you should be spasnning.
+    </td>
+    <td>
+      More cells.
+    </td>
+    <td>
+      More cells.
+    </td>
+  </tr>
+  <tr>
+    <td>
+      When you have a <pre>rowspan</pre> the first cell after the rowspan skips to the next column, as such.
+    </td>
+    <td>
+      One last cell!
+    </td>
+  </tr>
+</table>
+  
+</code></pre>
+
+<p>... will make this:</p>
+
+<table>
+  <tr>
+    <td>
+      Content in cell 1
+    </td>
+    <td>
+      Content in cell 2
+    </td>
+    <td>
+      Content in cell 3
+    </td>
+  </tr>
+  <tr>
+    <td>
+      Content in cell 4
+    </td>
+    <td colspan="2">
+      This is a cell that spans 2 columns. You can do this by writing <pre><td colspan="2"></pre> where the value for <pre>colspan</pre> is how many columns you should be spanning.
+    </td>
+  </tr>
+  <tr>
+    <td rowspan="2">
+      This is a cell that spans 2 rows. You can do this by writing <pr><td rowspan="2"></pre> where the value for <pre>rowspan</pre> is how many rows you should be spasnning.
+    </td>
+    <td>
+      More cells.
+    </td>
+    <td>
+      More cells.
+    </td>
+  </tr>
+  <tr>
+    <td>
+      When you have a <pre>rowspan</pre> the first cell after the rowspan skips to the next column, as such.
+    </td>
+    <td>
+      One last cell!
+    </td>
+  </tr>
+</table>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
