--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
 This code:
 
-<pre><code><table>
+<pre>
+<table>
   <tr>
     <td>
       Content in cell 1
@@ -73,8 +74,7 @@ This code:
     </td>
   </tr>
 </table>
-  
-</code></pre>
+</pre>
 
 <p>... will make this:</p>
 
