--- a/index.html
+++ b/index.html
@@ -31,93 +31,8 @@
 
 <h3>Tables</h3>
 
-This code:
+<p>Let's start making some tables!</p>
 
-<pre>
-<table>
-  <tr>
-    <td>
-      Content in cell 1
-    </td>
-    <td>
-      Content in cell 2
-    </td>
-    <td>
-      Content in cell 3
-    </td>
-  </tr>
-  <tr>
-    <td>
-      Content in cell 4
-    </td>
-    <td colspan="2">
-      This is a cell that spans 2 columns. You can do this by writing <pre><td colspan="2"></pre> where the value for <pre>colspan</pre> is how many columns you should be spanning.
-    </td>
-  </tr>
-  <tr>
-    <td rowspan="2">
-      This is a cell that spans 2 rows. You can do this by writing <pr><td rowspan="2"></pre> where the value for <pre>rowspan</pre> is how many rows you should be spasnning.
-    </td>
-    <td>
-      More cells.
-    </td>
-    <td>
-      More cells.
-    </td>
-  </tr>
-  <tr>
-    <td>
-      When you have a <pre>rowspan</pre> the first cell after the rowspan skips to the next column, as such.
-    </td>
-    <td>
-      One last cell!
-    </td>
-  </tr>
-</table>
-</pre>
-
-<p>... will make this:</p>
-
-<table>
-  <tr>
-    <td>
-      Content in cell 1
-    </td>
-    <td>
-      Content in cell 2
-    </td>
-    <td>
-      Content in cell 3
-    </td>
-  </tr>
-  <tr>
-    <td>
-      Content in cell 4
-    </td>
-    <td colspan="2">
-      This is a cell that spans 2 columns. You can do this by writing <pre><td colspan="2"></pre> where the value for <pre>colspan</pre> is how many columns you should be spanning.
-    </td>
-  </tr>
-  <tr>
-    <td rowspan="2">
-      This is a cell that spans 2 rows. You can do this by writing <pr><td rowspan="2"></pre> where the value for <pre>rowspan</pre> is how many rows you should be spasnning.
-    </td>
-    <td>
-      More cells.
-    </td>
-    <td>
-      More cells.
-    </td>
-  </tr>
-  <tr>
-    <td>
-      When you have a <pre>rowspan</pre> the first cell after the rowspan skips to the next column, as such.
-    </td>
-    <td>
-      One last cell!
-    </td>
-  </tr>
-</table>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
