--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
 
 <p>Let's start making some tables!</p>
 
+<p>There are a few elements necessary to create a table. In order:
+<ul>
+  <li>We start with <pre><code>table</code></pre> which defines the table</li>
+  <li>This is followed by <pre><code>tbody</code></pre></li>
+  <li>Each row needs to be defined with <pre><code>tr</code></pre></li>
+  <li>...and each cell with <pre><code>td</code></pre>
+</ul>
+
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
