--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
 <p>There are a few elements necessary to create a table. In order:
 <ul>
-  <li>We start with <pre><code>table</code></pre> which defines the table</li>
-  <li>This is followed by <pre><code>tbody</code></pre></li>
-  <li>Each row needs to be defined with <pre><code>tr</code></pre></li>
-  <li>...and each cell with <pre><code>td</code></pre>
+  <li>We start with <pre>table</pre> which defines the table</li>
+  <li>This is followed by <pre>tbody</pre></li>
+  <li>Each row needs to be defined with <pre>tr</pre></li>
+  <li>...and each cell with <pre>td></pre>
 </ul>
 
 
