--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
 <p>There are a few elements necessary to create a table. In order:
 <ul>
-  <li>We start with <pre>table</pre> which defines the table</li>
-  <li>This is followed by <pre>tbody</pre></li>
-  <li>Each row needs to be defined with <pre>tr</pre></li>
-  <li>...and each cell with <pre>td></pre>
+  <li>We start with <code>table</code> which defines the table</li>
+  <li>This is followed by <code>tbody</code></li>
+  <li>Each row needs to be defined with <code>tr</code></li>
+  <li>...and each cell with <code>td></code>
 </ul>
 
 
